--- a/app/src/main/res/layout/dialog_completed_theme.xml
+++ b/app/src/main/res/layout/dialog_completed_theme.xml
@@ -36,7 +36,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
-                android:background="@drawable/correct"/>
+                android:background="@drawable/check"/>
 
         <TextView
             android:layout_width="wrap_content"
