--- a/app/src/main/res/layout/fragment_calendar_view.xml
+++ b/app/src/main/res/layout/fragment_calendar_view.xml
@@ -20,7 +20,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorHitam"
         android:text="See all tasks"
         android:textSize="18sp"
         android:layout_gravity="center_horizontal"/>
