--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -30,7 +30,7 @@
                 android:text="Tue"
                 android:layout_gravity="center"
                 android:textSize="18sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorHitam"
                 android:alpha="0.5"/>
 
             <TextView
@@ -40,7 +40,7 @@
                 android:text="18"
                 android:layout_gravity="center"
                 android:textSize="24sp"
-                android:textColor="@color/colorAccent" />
+                android:textColor="@color/colorTosca" />
 
             <TextView
                 android:layout_width="wrap_content"
